chore: upgrade graalvm native images